# fleet-telemetry-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fleet-telemetry.code-workspace  go.mod  render.yaml
.github/workflows/: ci.yml
cmd/: main.go
cpp-parser/: CMakeLists.txt  Makefile  main.cpp  telemetry_parser.cpp  telemetry_parser.h
data/: sample_telemetry.csv
internal/api/: server.go
internal/db/: database.go
internal/models/: telemetry.go
internal/parser/: parser.go
scripts/: benchmark_parser.py  generate_data.py  generate_test_data.py
web/: index.html  nginx.conf
